--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -64,7 +64,7 @@
                 display: none;
             }
 
-            app-header app-toolbar .route-title {
+            app-header app-toolbar .app-toolbar-container {
                 display: flex;
                 width: 100%;
                 align-items: center;
@@ -138,7 +138,6 @@
                 }
             }
         </style>
-
         <app-location route="{{route}}"
                       use-hash-as-path></app-location>
 
@@ -178,7 +177,7 @@
             <app-header-layout>
                 <app-header slot="header" reveals effects="waterfall">
                     <app-toolbar>
-                        <div class="route-title">
+                        <div class="app-toolbar-container">
                             <div id="main-title">Заказ обедов</div>
                             <iron-pages
                                     selected="[[routeData.page]]"
@@ -243,7 +242,7 @@
          *
          * @customElement
          * @polymer
-         * @appliesMixin ExlibrisApplication.ReduxMixin
+         * @appliesMixin MealOrderApp.ReduxMixin
          */
         class MealOrderClientApp extends MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
@@ -252,11 +251,6 @@
 
             static get properties() {
                 return {
-                    /**
-                     * Used for routing.
-                     */
-                    routeData: {},
-
                     /**
                      * Chosen date.
                      */
@@ -269,39 +263,24 @@
                         type: Array,
                         statePath: 'currentOrder'
                     },
-
                     /**
                      * User's history for the chosen day.
                      */
                     history: {
                         type: Array,
                         statePath: 'currentHistory'
-                    }
-                }
-            }
-
-            static get actions() {
-                return {
-                    addDish(dish) {
-                        return {
-                            type: MealOrderClientApp.UserAction.ADD_DISH_TO_CART,
-                            dish: dish
-                        }
                     },
-                    removeDish(dish) {
-                    }
+                    /**
+                     * Used for routing.
+                     */
+                    routeData: {},
                 }
-            }
-
-            _addDishToOrder(e) {
-                this.dispatch('addDish', e.detail);
             }
 
             _getClassForDrawer(page) {
                 return page;
             }
         }
-
         window.customElements.define(MealOrderClientApp.is, MealOrderClientApp);
     </script>
 </dom-module>
