--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -19,8 +19,8 @@
   -->
 <script>
     {
+        window.MealOrderApp = window.MealOrderApp || {};
         const initialState = {};
-
         MealOrderApp.reducer = (state, action) => {
             if (!state) {
                 return initialState;
