Refactor namespace and imports

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -170,7 +170,7 @@
                         </div>
                     </app-toolbar>
                 </iron-pages>
-                <meal-order-drawer order="[[order]]" on-changed-history-date="_changeHistoryDate"></meal-order-drawer>
+                <meal-order-drawer order="[[order]]"></meal-order-drawer>
 
             </app-drawer>
 
