--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -21,6 +21,7 @@
 <script src="../utils/Utils.js"></script>
 <script>
     {
+        window.MealOrderApp = window.MealOrderApp || {};
         /*global Utils */
         const arrayOfDates = [{
             date: {
