Edit docs for inner structure of a menu

--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -176,7 +176,8 @@
                     /**
                      * Menu of a vendor.
                      *
-                     * Initial state represents its structure.
+                     * @property name is name of a vendor.
+                     * @property {array} categories list of categories with dishes.
                      */
                     menu: {
                         type: Array
