--- a/client/user/src/mealorder/menu/meal-order-vendor-menus.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menus.html
@@ -154,7 +154,8 @@
 
                     /**
                      * Full menu for day.
-                     * For structure details see {@code redux-store.html} or inner template.
+                     *
+                     * @property {array} each item is a menu of a vendor for a day.
                      */
                     items: {
                         type: Array,
