--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -25,6 +25,9 @@
 <link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="../shell/actions/user-actions.html">
+
+<link rel="import" href="meal-order-vendor-menus.html">
+
 <dom-module id="meal-order-menu-container">
     <template>
         <style>
@@ -117,6 +120,16 @@
                 </template>
             </dom-repeat>
         </paper-tabs>
+        <iron-pages
+                selected="[[routeData.menu]]"
+                attr-for-selected="name"
+                fallback-selection="view404"
+                role="main">
+
+            <meal-order-vendor-menus name="[[routeData.menu]]"
+                                     items="[[menu]]" route="[[subroute]]"
+                                     on-dish-added="addDishToOrder"></meal-order-vendor-menus>
+        </iron-pages>
     </template>
     <script>
         /**
