Add CSS and refactor routing for `menu-order-drawer`

--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -90,6 +90,10 @@
                 font-size: 0.75em;
             }
 
+            app-drawer.history {
+                --app-drawer-width: 300px;
+            }
+
             app-drawer {
                 --app-drawer-content-container: {
                     background-color: #fafafa;
