--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,5 +22,6 @@
     MealOrderApp.UserAction = {
         CHANGE_CURRENT_MENU: "CHANGE_CURRENT_MENU",
         CHANGE_CURRENT_CART: 'CHANGE_CURRENT_CART',
+        REMOVE_DISH: 'REMOVE_DISH',
     }
 </script>
