--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -50,8 +50,7 @@
                 attr-for-selected="name"
                 fallback-selection="view404"
                 role="main">
-            <meal-order-user-cart name="menu" order="[[order]]"
-                                  on-dish-removed="_removeDishFromOrder"></meal-order-user-cart>
+            <meal-order-user-cart name="menu" order="[[order]]"></meal-order-user-cart>
             <app-datepicker name="history" id="date-picker" view="vertical"
                             input-date="[[inputDate]]" date="{{outputDate}}" auto-update-date="true"
                             locale="ru-RU"></app-datepicker>
@@ -82,17 +81,6 @@
                 }
             }
 
-            static get actions() {
-                return {
-                    removeDish(dish) {
-                        return {
-                            type: MealOrderApp.UserAction.REMOVE_DISH,
-                            dish: dish
-                        }
-                    }
-                }
-            }
-
             static get observers() {
                 return [
                     '_updateDate(outputDate)',
@@ -111,10 +99,6 @@
                     date.day = arr[2];
                     this.dispatchEvent(new CustomEvent('changed-history-date', {detail: date}));
                 }
-            }
-
-            _removeDishFromOrder(e) {
-                this.dispatch('removeDish', e.detail);
             }
 
             _updateDate() {
