--- a/client/user/src/mealorder/menu/meal-order-user-order.html
+++ b/client/user/src/mealorder/menu/meal-order-user-order.html
@@ -105,7 +105,7 @@
                 const dish = {};
                 dish.vendor = this.order.vendor;
                 dish.name = this.order.dishes[e.model.index].title;
-                this.dispatchEvent(new CustomEvent('dish-removed', {detail: dish}));
+                this.dispatchEvent(new CustomEvent('dish-removed', {composed: true, detail: dish}));
             }
         }
 
