--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -208,7 +208,7 @@
                 dish.vendor = this.menu.name;
                 dish.price = this.menu.categories[e.model.parentModel.index].dishes[e.model.index].price;
                 dish.title = this.menu.categories[e.model.parentModel.index].dishes[e.model.index].title;
-                this.dispatchEvent(new CustomEvent('dish-added', {detail: dish}));
+                this.dispatchEvent(new CustomEvent('dish-added', {composed: true, detail: dish}));
             }
         }
 
