--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -57,11 +57,11 @@
                 font-size: 1.5em;
             }
 
-            .disabled .day{
+            .disabled .day {
                 color: #8c8c8c;
             }
 
-            .disabled .day-of-the-week{
+            .disabled .day-of-the-week {
                 color: #8c8c8c;
             }
 
@@ -82,42 +82,45 @@
 
         <app-route
                 route="{{route}}"
-                pattern="/:menu/:date"
-                data="{{routeData}}"
-                tail="{{subroute}}">
+                pattern="/:page/:date"
+                data="{{routeData}}">
         </app-route>
 
         <paper-tabs class="tabs" selected="[[routeData.date]]" attr-for-selected='key'>
             <dom-repeat items="{{calendar}}" as="calendar">
                 <template>
-                <dom-if if="[[calendar.hasMenu]]">
-                    <template>
-                        <paper-tab link>
-                            <a class="paper-tab-container"
-                               href="/#/menu/[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]"
-                               on-click="_handleClick">
-                                <div>
-                                    <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                    <dom-if if="[[calendar.hasMenu]]">
+                        <template>
+                            <paper-tab
+                                    key="[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]"
+                                    link>
+                                <a class="paper-tab-container"
+                                   href="/#/menu/[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]"
+                                   on-click="_handleClick">
+                                    <div>
+                                        <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                                        </div>
+                                        <div class="day">{{calendar.date.day}}</div>
                                     </div>
-                                    <div class="day">{{calendar.date.day}}</div>
-                                </div>
-                            </a>
-                        </paper-tab>
-                    </template>
-                </dom-if>
-                <dom-if if="[[!calendar.hasMenu]]">
-                    <template>
-                        <paper-tab link disabled>
-                            <div class="paper-tab-container disabled">
-                                <div>
-                                    <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                                </a>
+                            </paper-tab>
+                        </template>
+                    </dom-if>
+                    <dom-if if="[[!calendar.hasMenu]]">
+                        <template>
+                            <paper-tab
+                                    key="[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]"
+                                    link disabled>
+                                <div class="paper-tab-container disabled">
+                                    <div>
+                                        <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                                        </div>
+                                        <div class="day">{{calendar.date.day}}</div>
                                     </div>
-                                    <div class="day">{{calendar.date.day}}</div>
                                 </div>
-                            </div>
-                        </paper-tab>
-                    </template>
-                </dom-if>
+                            </paper-tab>
+                        </template>
+                    </dom-if>
                 </template>
             </dom-repeat>
         </paper-tabs>
@@ -159,6 +162,13 @@
                      */
                     routeData: {
                         type: Object,
+                    },
+
+                    /**
+                     * Current selected day by user.
+                     */
+                    selectedDay: {
+                        type: Object,
                     }
                 };
             }
@@ -193,13 +203,6 @@
                 }
             }
 
-            connectedCallback() {
-                super.connectedCallback();
-                if (this.calendar[0].hasMenu) {
-                    this.dispatch('changeCurrentMenu', this.calendar[0].date);
-                    this.dispatch('changeCurrentCart', this.calendar[0].date);
-                }
-            }
 
             static get observers() {
                 return [
@@ -208,18 +211,30 @@
             }
 
             _pageChanged() {
-                if (!this.route.path) {
+                if (!this.routeData.page) {
                     this.set('route.path', '/menu/' + this.calendar[0].date.year + "-" +
                         this.calendar[0].date.month + "-" + this.calendar[0].date.day);
                 }
                 else {
-                    const arr = this.routeData.date.split('-');
-                    const date = {};
-                    date.year = arr[0];
-                    date.month = arr[1];
-                    date.day = arr[2];
-                    this.dispatch('changeCurrentMenu', date);
-                    this.dispatch('changeCurrentCart', date);
+                    let date = {};
+                    if (this.routeData.page.startsWith("menu")) {
+                        if (!this.routeData.date) {
+                            date = this.selectedDay;
+                            console.log(date);
+                            this.set('route.path', '/menu/' + date.year + "-" +
+                                date.month + "-" + date.day);
+                        }
+                        else {
+                            const arr = this.routeData.date.split('-');
+                            date.year = arr[0];
+                            date.month = arr[1];
+                            date.day = arr[2];
+                            this.set('selectedDay', date);
+                        }
+                        this.dispatch('changeCurrentMenu', date);
+                        this.dispatch('changeCurrentCart', date);
+                        this.dispatchEvent(new CustomEvent('date-updated', {detail: date}));
+                    }
                 }
             }
 
@@ -228,6 +243,7 @@
                 this.dispatch('changeCurrentCart', this.calendar[e.model.index].date);
             }
         }
+
         window.customElements.define(MealOrderMenuContainer.is, MealOrderMenuContainer);
     </script>
 </dom-module>
