Change padding of a record from 2px -> 0

--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -36,7 +36,7 @@
 
             paper-item {
                 font-size: 15px;
-                padding: 2px 2%;
+                padding: 0 2%;
                 width: 96%;
                 border-bottom: 1px solid #ddd;
             }
@@ -104,7 +104,7 @@
 
             @media only screen and (max-width: 600px) {
                 paper-item {
-                    padding: 2px 2%;
+                    padding: 0 2%;
                 }
             }
         </style>
