Refactor `dayOfTheWeek` in the initialState

--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -98,7 +98,7 @@
                                    href="/#/menu/[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]"
                                    on-click="_handleClick">
                                     <div>
-                                        <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                                        <div class="day-of-the-week">{{calendar.dayOfTheWeek}}
                                         </div>
                                         <div class="day">{{calendar.date.day}}</div>
                                     </div>
@@ -113,7 +113,7 @@
                                     link disabled>
                                 <div class="paper-tab-container disabled">
                                     <div>
-                                        <div class="day-of-the-week">{{calendar.date.dayOfTheWeek}}
+                                        <div class="day-of-the-week">{{calendar.dayOfTheWeek}}
                                         </div>
                                         <div class="day">{{calendar.date.day}}</div>
                                     </div>
