--- a/client/user/index.html
+++ b/client/user/index.html
@@ -32,7 +32,7 @@
         body {
             font-family: 'Roboto', 'Noto', sans-serif;
             background-color: #F2F2F2;
-            flex-direction: column;
+            color: #616161;
         }
     </style>
 </head>
